WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222878
REGRESSION(
r274033
) [GLIB] Bots exiting early after lots of failures due to render tree differences
https://bugs.webkit.org/show_bug.cgi?id=222878
Summary
REGRESSION(r274033) [GLIB] Bots exiting early after lots of failures due to r...
Lauro Moura
Reported
2021-03-06 20:13:10 PST
Making the bots exit early due to lots of layout test failures. For tree dump tests, It's dumping the layers in the top level, not nested in the tree. There are a First GTK build with the failures:
https://build.webkit.org/#/builders/15/builds/434
For example: fast/frames/001.html --- /home/lauro/dev/WebKit/layout-test-results/fast/frames/001-expected.txt +++ /home/lauro/dev/WebKit/layout-test-results/fast/frames/001-actual.txt @@ -6,26 +6,29 @@ RenderText {#text} at (0,0) size 522x17 text run at (0,0) width 522: "The three red squares below should all look the same and be filled only with black." RenderBR {BR} at (522,0) size 0x17 - RenderIFrame {IFRAME} at (0,18) size 170x170 [border: (10px solid #FF0000)] - layer at (0,0) size 100x100 - RenderView at (0,0) size 100x100 - layer at (0,0) size 100x100 - RenderBlock {HTML} at (0,0) size 100x100 - RenderBody {BODY} at (8,8) size 84x84 RenderText {#text} at (170,174) size 4x17 text run at (170,174) width 4: " " - RenderEmbeddedObject {OBJECT} at (174,18) size 170x170 [border: (10px solid #FF0000)] - layer at (0,0) size 100x100 - RenderView at (0,0) size 100x100 - layer at (0,0) size 100x100 - RenderBlock {HTML} at (0,0) size 100x100 - RenderBody {BODY} at (8,8) size 84x84 RenderText {#text} at (344,174) size 4x17 text run at (344,174) width 4: " " - RenderEmbeddedObject {OBJECT} at (348,18) size 170x170 [border: (10px solid #FF0000)] - layer at (0,0) size 100x100 - RenderView at (0,0) size 100x100 - layer at (0,0) size 100x100 - RenderBlock {HTML} at (0,0) size 100x100 - RenderBody {BODY} at (8,8) size 84x84 RenderText {#text} at (0,0) size 0x0 +layer at (8,26) size 170x170 + RenderIFrame {IFRAME} at (0,18) size 170x170 [border: (10px solid #FF0000)] + layer at (0,0) size 100x100 + RenderView at (0,0) size 100x100 + layer at (0,0) size 100x100 + RenderBlock {HTML} at (0,0) size 100x100 + RenderBody {BODY} at (8,8) size 84x84 +layer at (182,26) size 170x170 + RenderEmbeddedObject {OBJECT} at (174,18) size 170x170 [border: (10px solid #FF0000)] + layer at (0,0) size 100x100 + RenderView at (0,0) size 100x100 + layer at (0,0) size 100x100 + RenderBlock {HTML} at (0,0) size 100x100 + RenderBody {BODY} at (8,8) size 84x84 +layer at (356,26) size 170x170 + RenderEmbeddedObject {OBJECT} at (348,18) size 170x170 [border: (10px solid #FF0000)] + layer at (0,0) size 100x100 + RenderView at (0,0) size 100x100 + layer at (0,0) size 100x100 + RenderBlock {HTML} at (0,0) size 100x100 + RenderBody {BODY} at (8,8) size 84x84
Attachments
Patch
(1.66 KB, patch)
2021-03-06 20:31 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2021-03-06 20:28:03 PST
Oops, I think I see the mistake.
Tim Horton
Comment 2
2021-03-06 20:31:39 PST
Created
attachment 422520
[details]
Patch
Tim Horton
Comment 3
2021-03-06 20:34:03 PST
Hopefully that does the trick, if not, let me know!
EWS
Comment 4
2021-03-06 21:05:04 PST
Committed
r274049
: <
https://commits.webkit.org/r274049
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422520
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-06 21:06:15 PST
<
rdar://problem/75139904
>
Lauro Moura
Comment 6
2021-03-06 21:39:45 PST
> 58451 tests ran as expected, 66 didn't
Looks like it worked. These unexpected are from previous builds and have some new passes among them. Thanks for the quick response!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug