REGRESSION(r274033) [GLIB] Bots exiting early after lots of failures due to render tree differences https://bugs.webkit.org/show_bug.cgi?id=222878

Reviewed by Wenson Hsieh.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForModel const):
Invert the logic (to the sane direction, I have no idea why I typed it this way),
so that we don't require compositing for everything if ENABLE(MODEL_ELEMENT) is false.


Canonical link: https://commits.webkit.org/234985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274049 268f45cc-cd09-0410-ab3c-d52691b4dbfc